--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,15 +4,22 @@ server {
 
   location /api/ {
     proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/api/;
-  }
-  location /admin/ {
-    proxy_set_header Host $http_host;
-    #proxy_pass http://backend:8000/admin/;
+    proxy_pass http://backend:9000/api/;
   }
 
+  location /admin/ {
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:9000/admin/;
+  }
+  
   location / {
+    proxy_set_header Host $http_host;
     alias /static/;
     try_files $uri $uri/ /index.html;
+  }
+
+  location /media/ {
+    proxy_set_header Host $http_host;
+    alias /app/media/;
   }
 }
