--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,6 +122,7 @@ jobs:
           context: ./nginx/
           push: true
           tags: alexrashkin/kittygram_gateway:latest
+  
   deploy:
     runs-on: ubuntu-latest
     needs: 
@@ -152,9 +153,8 @@ jobs:
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+          sudo docker image prune -a
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
