--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,6 +152,7 @@ jobs:
           cd kittygram_final
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
+          sudo docker compose -f docker-compose.production.yml build
           sudo docker compose -f docker-compose.production.yml up -d
           sudo docker compose -f docker-compose.production.yml logs
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
