--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,6 +20,6 @@ server {
 
   location /media/ {
     proxy_set_header Host $http_host;
-    alias /var/www/kittygram/media/;
+    alias /media/;
   }
 }
