test images success

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pg_data_production:
   static_volume:
+  media:
 
 services:
   db:
@@ -16,6 +17,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/static/
+      - media:/media
     depends_on:
       - db
 
@@ -33,6 +35,7 @@ services:
       - 9000:80
     volumes:
       - static_volume:/static/
+      - media:/media
     depends_on:
       - backend
       - frontend
