--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     env_file: .env
     volumes:
       - static:/static/
-      - media:/app/media/
+      - media:/media
     depends_on:
       - db
 
@@ -35,7 +35,7 @@ services:
       - 9000:80
     volumes:
       - static:/static/
-      - media:/app/media/
+      - media:/media
     depends_on:
       - backend
       - frontend
