--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,5 +21,6 @@ server {
   location /media/ {
     proxy_set_header Host $http_host;
     alias /media/;
+    try_files $uri $uri/ /index.html;
   }
 }
