--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -17,7 +17,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/static/
-      - media:/media
+      - media:/media/
     depends_on:
       - db
 
@@ -35,7 +35,7 @@ services:
       - 9000:80
     volumes:
       - static_volume:/static/
-      - media:/media
+      - media:/media/
     depends_on:
       - backend
       - frontend
