ready for second review

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ SECRET_KEY=django-insecure-r)o%6bu2tebb4a47xaf)7@5v&t)-55nb_1$__vvy_c&*j0%4s6
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=kittygram
+DEBUG=False
+ALLOWED_HOSTS=['127.0.0.1', '158.160.67.32', 'localhost', 'backend', 'kittygramproject.myvnc.com']
